--- a/package.json
+++ b/package.json
@@ -1,8 +1,34 @@
 {
 	"name": "svelte-tuio",
-	"private": true,
 	"version": "0.0.1",
+	"description": "A Svelte 5 library for handling TUIO protocol events through WebSocket connections",
+	"license": "MIT",
 	"type": "module",
+	"keywords": [
+		"svelte",
+		"tuio",
+		"tangible",
+		"websocket",
+		"interactive",
+		"touch",
+		"svelte5",
+		"runes",
+		"touchdesigner"
+	],
+	"files": [
+		"dist",
+		"src/python"
+	],
+	"svelte": "./dist/index.js",
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js"
+		}
+	},
+	"peerDependencies": {
+		"svelte": "^5.0.0"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -29,6 +55,7 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"jsdom": "^27.0.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
@@ -40,5 +67,9 @@
 		"vite": "^7.1.7",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
+	},
+	"dependencies": {
+		"@sveltejs/package": "^2.5.4",
+		"svelte": "^5.0.0"
 	}
 }
